Licese key abuse check changes

--- a/src/etc/Translation_de.properties
+++ b/src/etc/Translation_de.properties
@@ -534,8 +534,8 @@ onepublicfolderpanel.unable_to_connect_to_a_source=Kann zu keiner Quelle verbind
 
 onlinelabel.connecting=Verbinden
 onlinelabel.connecting.text=Sie sind online, aber nur zu wenigen Benutzern verbunden. Bitte warten Sie eine kurze Zeit um vollst\u00e4ndig verbunden zu sein. Falls dies nicht geschieht, lesen Sie die FAQ unter @ http\://www.powerfolder.com
-onlinelabel.disabled=Deaktiviert (Intensive Nutzung erkannt)
-onlinelabel.disabled.text=PowerFolder arbeitet derzeit nicht, da eine intensive Nutzung des Programms erkannt wurde.
+onlinelabel.disabled=Deaktiviert
+onlinelabel.disabled.text=PowerFolder arbeitet derzeit nicht.
 onlinelabel.offline=Offline
 onlinelabel.offline.text=Sie sind offline und mit keinem PowerFolder Benutzer verbunden
 onlinelabel.online=Online
